# awake-power-timer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
aur/: PKGBUILD  README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: battery_action.rs  history.rs  idle_action.rs  keep_awake.rs  mod.rs  power_timer.rs  process_trigger.rs  scheduler.rs  settings.rs  system_monitor.rs
src/components/: HistoryCard.tsx  KeepAwakeCard.tsx  PowerTimerCard.tsx  ScheduleCard.tsx  SettingsCard.tsx  SystemMonitorCard.tsx
src/i18n/: en.json  i18n.ts  vi.json
src/lib/: utils.test.ts  utils.ts
